--- a/Examples/Delphi/Firemonkey/Mobile/Unit_FMX_Mobile_Tree_Settings.fmx
+++ b/Examples/Delphi/Firemonkey/Mobile/Unit_FMX_Mobile_Tree_Settings.fmx
@@ -6,36 +6,35 @@ object SettingsForm: TSettingsForm
   ClientWidth = 320
   FormFactor.Width = 320
   FormFactor.Height = 480
-  FormFactor.Devices = [dkDesktop]
-  DesignerMobile = True
-  DesignerWidth = 320
-  DesignerHeight = 480
-  DesignerDeviceName = 'iPhone'
-  DesignerOrientation = 0
+  FormFactor.Devices = [Desktop, iPhone, iPad]
+  DesignerMasterStyle = 2
   object Layout1: TLayout
-    Align = alTop
-    Height = 50.000000000000000000
-    Width = 320.000000000000000000
+    Size.Width = 320.000000000000000000
+    Size.Height = 50.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 0
     object Button1: TButton
-      Height = 31.000000000000000000
       Position.X = 16.000000000000000000
       Position.Y = 8.000000000000000000
+      Size.Width = 73.000000000000000000
+      Size.Height = 44.000000000000000000
+      Size.PlatformDefault = False
       StyleLookup = 'backtoolbutton'
       TabOrder = 0
       Text = 'Back'
-      Trimming = ttCharacter
-      Width = 73.000000000000000000
+      TextSettings.Trimming = None
       OnClick = Button1Click
     end
   end
   object CheckBox1: TCheckBox
-    Height = 19.000000000000000000
     IsChecked = True
     Position.X = 16.000000000000000000
     Position.Y = 64.000000000000000000
+    Size.Width = 120.000000000000000000
+    Size.Height = 19.000000000000000000
+    Size.PlatformDefault = False
     TabOrder = 1
     Text = 'Lines'
-    Width = 120.000000000000000000
     OnChange = CheckBox1Change
   end
 end
